--- a/src/app/pages/admin/all-users/all-users.component.html
+++ b/src/app/pages/admin/all-users/all-users.component.html
@@ -1,1 +1,16 @@
-<p>all-users works!</p>
+
+
+<div class="user_table">
+    <div class="row heading">
+        <div class="cell"> Username </div>
+        <div class="cell"> Name </div>
+        <div class="cell"> Email </div>
+        <div class="cell"> Edit </div>
+    </div>
+    <div class="row">
+        <div class="cell"> Username </div>
+        <div class="cell"> Name </div>
+        <div class="cell"> Email </div>
+        <div class="cell"> Edit </div>
+    </div>
+</div>
