--- a/src/app/pages/admin/admin.component.scss
+++ b/src/app/pages/admin/admin.component.scss
@@ -31,6 +31,10 @@
                     align-items: center;
                     gap: 20px;
                     justify-content: flex-start;
+
+                    .icon{
+                        width: 10px;
+                    }
                 }
 
                 .navigation_dropdown {
@@ -40,12 +44,13 @@
                     gap: 0px;
                     justify-content: flex-start;
                     margin: 10px 0;
-                    background-color: #fff;
-                    display: flex;
-                    color: #000;
+                    
 
                     .dropdown{
-                        margin: 10px 20px;
+                        margin: 5px 20px;
+                        padding: 5px 10px;
+                        box-shadow: rgba(255, 255, 255, 0.35) 0px -1px 0px 0px inset;
+                        
                     }
                 }
 
@@ -55,6 +60,12 @@
 
     .right {
         width: 80%;
+        margin: 0 auto;
         background-color: $color-bg;
+
+        .right_container{
+            max-width: 80%;
+            margin: 50px auto;
+        }
     }
 }
